Update questionnaire margin

--- a/src/custom/styles/containers/Questionnaire.pcss
+++ b/src/custom/styles/containers/Questionnaire.pcss
@@ -184,7 +184,7 @@
       border-bottom: none;
       display: flex;
       flex-direction: column;
-      width: 100;
+      width: 100%;
 
 
       legend {
@@ -195,7 +195,7 @@
         font-style: normal;
         font-weight: normal;
         margin-left: 13px;
-        margin-top: 26px;
+        margin-top: 30px;
         position: absolute;
       }
 
@@ -210,7 +210,7 @@
         font-style: normal;
         font-weight: normal;
         height: 112px;
-        margin-top: 22px;
+        margin-top: 25px;
         outline: none;
         padding-left: 13px;
         padding-top: 11px;
