Fix: colors and styles polish

--- a/src/components/WhiteList/WhiteList.pcss
+++ b/src/components/WhiteList/WhiteList.pcss
@@ -14,7 +14,7 @@
   }
 
   &__title {
-    color: var(--color-white);
+    color: var(--primary-text-color);
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
@@ -34,7 +34,7 @@
     transition: 0.2s;
 
     &__label {
-      color: var(--color-white);
+      color: var(--primary-text-color);
       font-family: Roboto;
       font-size: 12px;
       font-style: normal;
@@ -235,7 +235,7 @@
           }
 
           &__value {
-            color: var(--color-white);
+            color: var(--primary-text-color);
             font-size: 12px;
             font-style: normal;
             font-weight: 500;
@@ -302,7 +302,7 @@
           }
 
           &__address {
-            color: var(--color-white);
+            color: var(--primary-text-color);
             font-family: Roboto;
             font-size: 13px;
             font-style: normal;
@@ -361,7 +361,7 @@
         width: 100%;
 
         &__label {
-          color: var(--color-white);
+          color: var(--primary-text-color);
           font-family: Roboto;
           font-size: 12px;
           font-style: normal;
@@ -408,7 +408,7 @@
       border-top-right-radius: 3px;
 
       &-inner {
-        color: var(--color-white);
+        color: var(--primary-text-color);
         font-size: 16px;
         font-style: normal;
         font-weight: normal;
@@ -432,7 +432,7 @@
 
       input {
         border: 1px solid var(--input-block-border-color) !important;
-        color: var(--color-white);
+        color: var(--primary-text-color);
       }
     }
 
