--- a/src/containers/Header/Header.pcss
+++ b/src/containers/Header/Header.pcss
@@ -121,7 +121,7 @@ header {
     }
 
     &__location {
-      color: var(--color-white);
+      color: var(--primary-text-color);
       display: block;
       font-size: 18px;
       text-align: center;
