--- a/src/custom/styles/colors.pcss
+++ b/src/custom/styles/colors.pcss
@@ -1,1 +1,6 @@
 /* variables overwriting */
+:root {
+  --table-text-color: rgb(100, 130, 120);
+  --table-header-text-color: rgb(158, 207, 195);
+  --table-subheader-color: rgb(145, 147, 147);
+}
