--- a/src/custom/styles/containers/ProfilePartial.pcss
+++ b/src/custom/styles/containers/ProfilePartial.pcss
@@ -99,7 +99,7 @@
           background: transparent;
           border: unset;
           bottom: 0;
-          color: var(--color-white);
+          color: var(--primary-text-color);
           font-size: calc(var(--gap) * 2);
           margin-top: 8px;
           width: 100%;
@@ -198,7 +198,7 @@
             }
 
             &::-webkit-scrollbar-thumb {
-              background-color: var(--color-white);
+              background-color: var(--primary-text-color);
             }
           }
         }
