--- a/src/custom/styles/containers/ProfileVerification.pcss
+++ b/src/custom/styles/containers/ProfileVerification.pcss
@@ -5,7 +5,7 @@
 
   &__title {
     align-items: center;
-    color: var(--color-white);
+    color: var(--primary-text-color);
     display: flex;
     font-family: "Noto Sans SC";
     font-size: 20px;
@@ -195,7 +195,7 @@
 
       &__text {
         align-items: center;
-        color: var(--color-white);
+        color: var(--primary-text-color);
         display: flex;
         font-family: "Noto Sans SC";
         font-size: 12px;
