--- a/src/custom/styles/screens/EmailVerification.pcss
+++ b/src/custom/styles/screens/EmailVerification.pcss
@@ -27,7 +27,7 @@
         padding: 0 25px;
 
         &-text {
-          color: var(--color-white);
+          color: var(--primary-text-color);
           font-family: var(--font-family);
           font-size: 14px;
           font-style: normal;
@@ -39,7 +39,7 @@
       }
 
       .cr-button {
-        color: var(--color-white);
+        color: var(--primary-text-color);
       }
     }
   }
