--- a/src/custom/styles/screens/ProfileScreen.pcss
+++ b/src/custom/styles/screens/ProfileScreen.pcss
@@ -45,7 +45,7 @@
 
   &__details-user > p,
   &__verification-header > span {
-    color: var(--color-white);
+    color: var(--primary-text-color);
     font-family: var(--font-family);
     font-size: 20px !important;
     font-style: normal;
@@ -54,7 +54,7 @@
   }
 
   #referral-id {
-    color: var(--color-white);
+    color: var(--primary-text-color);
     font-family: var(--font-family);
     font-style: normal;
     font-weight: normal;
@@ -70,7 +70,7 @@
   }
 
   &__label {
-    color: var(--color-white);
+    color: var(--primary-text-color);
     font-family: var(--font-family);
     font-size: 14px;
     font-style: normal;
@@ -80,7 +80,7 @@
 
   &__text-success,
   &__ml-gap {
-    color: var(--color-white);
+    color: var(--primary-text-color);
     font-family: var(--font-family);
     font-size: 12px;
     font-style: normal;
