--- a/src/plugins/ieo/components/IEODetails/IEODetails.pcss
+++ b/src/plugins/ieo/components/IEODetails/IEODetails.pcss
@@ -1,7 +1,7 @@
 .ieo-profile-details {
   background: var(--main-bg);
   border-radius: calc(var(--gap) * 0.5);
-  color: var(--color-white);
+  color: var(--primary-text-color);
   margin-bottom: calc(var(--gap) * 5);
 
   &__header {
@@ -96,7 +96,7 @@
     width: 100%;
 
     &__first-column {
-      color: var(--color-white);
+      color: var(--primary-text-color);
     }
   }
 }
