--- a/src/plugins/ieo/components/LoginBlur/LoginBlur.pcss
+++ b/src/plugins/ieo/components/LoginBlur/LoginBlur.pcss
@@ -2,7 +2,7 @@
   &__content {
     &__login {
       align-items: center;
-      color: var(--color-white);
+      color: var(--primary-text-color);
       display: flex;
       font-size: 25px;
       font-style: normal;
@@ -35,7 +35,7 @@
 
     &__create-account {
       bottom: 10px;
-      color: var(--color-white);
+      color: var(--primary-text-color);
       cursor: pointer;
       font-size: 12px;
       font-weight: normal;
