--- a/src/plugins/ieo/containers/IEOInfo/IEOInfo.pcss
+++ b/src/plugins/ieo/containers/IEOInfo/IEOInfo.pcss
@@ -1,7 +1,7 @@
 .ieo-profile-info {
   background: var(--main-background-color);
   border-radius: calc(var(--gap) * 0.5);
-  color: var(--color-white);
+  color: var(--primary-text-color);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
