--- a/src/plugins/ieo/containers/OrderIEO/OrderIEO.pcss
+++ b/src/plugins/ieo/containers/OrderIEO/OrderIEO.pcss
@@ -15,7 +15,7 @@
       width: 100%;
 
       &-text {
-        color: var(--color-white);
+        color: var(--primary-text-color);
         font-size: var(--font-size);
       }
     }
