--- a/src/plugins/ieo/screens/IEOListScreen/IEOListScreen.pcss
+++ b/src/plugins/ieo/screens/IEOListScreen/IEOListScreen.pcss
@@ -2,7 +2,7 @@
   padding-top: calc(var(--gap) * 2.5);
 
   &__header {
-    color: var(--color-white);
+    color: var(--primary-text-color);
     font-size: calc(var(--gap) * 3.33);
     font-style: normal;
     font-weight: 500;
