--- a/src/screens/ConfirmScreen/ConfirmScreen.pcss
+++ b/src/screens/ConfirmScreen/ConfirmScreen.pcss
@@ -213,7 +213,7 @@
   }
 
   .pg-confirm__active-4 {
-    color: var(--color-white);
+    color: var(--primary-text-color);
     font-weight: bold;
   }
 
