--- a/src/styles/colors.pcss
+++ b/src/styles/colors.pcss
@@ -48,7 +48,7 @@
   --color-red: var(--red);
   --background-dark: var(--main-bg);
   --background-wallet-item: var(--header);
-  --background-dropdown-hover-text: var(--color-white);
+  --background-dropdown-hover-text: var(--primary-text-color);
   --button-primary: var(--button-normal);
   --button-hover: linear-gradient(0deg, rgba(#fff, 0.1), rgba(#fff, 0.1)), var(--button-normal);
   --button-active: linear-gradient(0deg, rgba(#000, 0.1), rgba(#000, 0.1)), var(--button-normal);
@@ -57,7 +57,7 @@
   --text-table-grey: var(--placeholder-text);
   --order-input-border-color: var(--placeholder-text);
   --order-input-input-bg: transparent;
-  --order-input-input-color: var(--color-white);
+  --order-input-input-color: var(--primary-text-color);
   --table-background: var(--main-bg);
   --table-dark-header-color: var(--header);
   --title-component-color: var(--header-text);
@@ -79,9 +79,9 @@
   --order-dropdown-background-color: transparent;
   --order-crypto-icon-background-color: transparent;
   --order-crypto-font-color: var(--placeholder-text);
-  --order-input-color: var(--color-white);
+  --order-input-color: var(--primary-text-color);
   --markets-filter-color: var(--text);
-  --markets-filter-active-color: var(--color-white);
+  --markets-filter-active-color: var(--primary-text-color);
   --markets-title-color: var(--header-text);
   --markets-search-border-color: var(--placeholder-text);
   --markets-selected-color: var(--text);
@@ -125,19 +125,20 @@
   --navbar-text-color: var(--text);
 
   --active-color: #FA00FF; */
-  --table-text-color: var(--placeholder-text);
+
+  /* --table-text-color: var(--placeholder-text); */
 
   /* wallets */
 
-  /* --wallets-locked-amount: var(--color-white);
-  --wallets-locked-amount-active: var(--color-white);
-  --wallets-item-font: var(--color-white);
-  --wallets-item-font-active: var(--color-white);
+  /* --wallets-locked-amount: var(--primary-text-color);
+  --wallets-locked-amount-active: var(--primary-text-color);
+  --wallets-item-font: var(--primary-text-color);
+  --wallets-item-font-active: var(--primary-text-color);
   --wallets-item-bg: var(--main-bg);
   --wallets-item-bg-active: var(--selected-item);
   --wallets-item-bg-hover: linear-gradient(0deg, rgba(#fff, 0.1), rgba(#fff, 0.1)), var(--selected-item);
   --wallets-item-border: var(--selected-item);
-  --wallets-balance: var(--color-white);
+  --wallets-balance: var(--primary-text-color);
   --wallets-table-divider: var(--text); */
 
   /* profile */
