--- a/src/styles/themes/basic.pcss
+++ b/src/styles/themes/basic.pcss
@@ -19,7 +19,7 @@
 
   /* --background-dropdown: var(--button-normal);
   --background-dropdown-hover: var(--header-text);
-  --button-dark-gray: linear-gradient(0deg, rgba(#fff, 0.5), rgba(#fff, 0.5)), var(--color-white);
+  --button-dark-gray: linear-gradient(0deg, rgba(#fff, 0.5), rgba(#fff, 0.5)), var(--primary-text-color);
   --copyable-field-border: var(--base-2);
   --header-border: var(--placeholder-text);
   --input-block-border-color: var(--placeholder-text);
