--- a/src/containers/ModalWithdrawSubmit/ModalWithdrawSubmit.pcss
+++ b/src/containers/ModalWithdrawSubmit/ModalWithdrawSubmit.pcss
@@ -6,7 +6,7 @@
   input {
     background: var(--kyc-button);
     border-radius: 4px;
-    color: var(--color-white);
+    color: var(--primary-text-color);
     cursor: pointer;
     font-size: calc(var(--gap) * 2.66);
     font-weight: normal;
