--- a/src/custom/containers/Header/Header.pcss
+++ b/src/custom/containers/Header/Header.pcss
@@ -123,7 +123,7 @@ header {
     }
 
     &__location {
-      color: var(--color-white);
+      color: var(--primary-text-color);
       display: block;
       font-size: 18px;
       text-align: center;
