--- a/src/custom/styles/components/KYCLoginModal.pcss
+++ b/src/custom/styles/components/KYCLoginModal.pcss
@@ -42,7 +42,7 @@
       background: var(--kyc-header-color);
       border-bottom: 1px solid var(--kyc-header-border);
       border-radius: 4px 4px 0 0;
-      color: var(--color-white);
+      color: var(--primary-text-color);
       display: flex;
       flex-direction: row;
       font-size: 16px;
