--- a/src/custom/styles/components/SummaryField.pcss
+++ b/src/custom/styles/components/SummaryField.pcss
@@ -1,11 +1,11 @@
 .cr-withdraw__summary-field {
   .cr-summary-field-message {
-    color: var(--color-white);
+    color: var(--primary-text-color);
     font-family: var(--font-family);
   }
 
   .cr-summary-field-content {
-    color: var(--color-white);
+    color: var(--primary-text-color);
 
     .cr-decimal__opacity {
       opacity: 0.6;
