--- a/src/custom/styles/containers/Documents.pcss
+++ b/src/custom/styles/containers/Documents.pcss
@@ -12,7 +12,7 @@
     }
 
     &-content-2 {
-      color: var(--color-white);
+      color: var(--primary-text-color);
       font-size: 14px;
       font-weight: normal;
       line-height: 14px;
@@ -64,7 +64,7 @@
 
   &__questionnaire-label {
     align-items: center;
-    color: var(--color-white);
+    color: var(--primary-text-color);
     display: flex;
     font-size: 12px;
     font-weight: normal;
