--- a/src/custom/styles/containers/Idenfy.pcss
+++ b/src/custom/styles/containers/Idenfy.pcss
@@ -29,7 +29,7 @@
     width: calc(100% - 50px);
 
     p {
-      color: var(--color-white);
+      color: var(--primary-text-color);
       font-size: 14px;
       text-align: center;
     }
