--- a/src/custom/styles/containers/Order.pcss
+++ b/src/custom/styles/containers/Order.pcss
@@ -10,7 +10,7 @@
           &__total {
             &__label,
             &__content {
-              color: var(--color-white);
+              color: var(--primary-text-color);
               font-family: var(--font-family);
               font-size: 15px;
               font-weight: bold;
