--- a/src/custom/styles/containers/Questionnaire.pcss
+++ b/src/custom/styles/containers/Questionnaire.pcss
@@ -9,7 +9,7 @@
 
   &__title {
     align-items: center;
-    color: var(--color-white);
+    color: var(--primary-text-color);
     display: flex;
     font-family: 'Noto Sans SC';
     font-size: 20px;
@@ -33,7 +33,7 @@
       padding: 22px 25px 21px 25px;
 
       &__title {
-        color: var(--color-white);
+        color: var(--primary-text-color);
         font-family: 'Noto Sans SC';
         font-size: 14px;
         font-style: normal;
@@ -125,7 +125,7 @@
             }
 
             &::-webkit-scrollbar-thumb {
-              background-color: var(--color-white);
+              background-color: var(--primary-text-color);
             }
           }
         }
@@ -153,7 +153,7 @@
           background: transparent;
           border: unset;
           bottom: 0;
-          color: var(--color-white);
+          color: var(--primary-text-color);
           font-size: 12px;
           margin-top: 11px;
           width: 100%;
@@ -204,7 +204,7 @@
         border: 1px solid var(--orders-border-color);
         border-radius: 4px;
         box-sizing: border-box;
-        color: var(--color-white);
+        color: var(--primary-text-color);
         font-family: 'Noto Sans SC';
         font-size: 12px;
         font-style: normal;
@@ -251,7 +251,7 @@
     width: 100%;
 
     &__item {
-      color: var(--color-white);
+      color: var(--primary-text-color);
       margin: 0;
     }
   }
