--- a/src/custom/styles/screens/ConfirmScreen.pcss
+++ b/src/custom/styles/screens/ConfirmScreen.pcss
@@ -19,7 +19,7 @@
 
         &::after {
           align-items: center;
-          color: var(--color-white);
+          color: var(--primary-text-color);
           display: flex;
           font-family: Roboto;
           font-size: 14px;
