--- a/src/plugins/ieo/components/IEOProjectIntroduction/IEOProjectIntroduction.pcss
+++ b/src/plugins/ieo/components/IEOProjectIntroduction/IEOProjectIntroduction.pcss
@@ -1,7 +1,7 @@
 .ieo-profile-project-introduction {
   background: var(--main-bg);
   border-radius: calc(var(--gap) * 0.5);
-  color: var(--color-white);
+  color: var(--primary-text-color);
   margin-bottom: calc(var(--gap) * 5);
 
   &__header {
