--- a/src/plugins/ieo/components/OrderExecuteSuccessModal/OrderExecuteSuccessModal.pcss
+++ b/src/plugins/ieo/components/OrderExecuteSuccessModal/OrderExecuteSuccessModal.pcss
@@ -31,7 +31,7 @@
       background: var(--kyc-header-color);
       border-bottom: 1px solid var(--kyc-header-border);
       border-radius: 4px 4px 0 0;
-      color: var(--color-white);
+      color: var(--primary-text-color);
       display: flex;
       flex-direction: row;
       font-size: 16px;
