--- a/src/screens/History/HistoryTab.pcss
+++ b/src/screens/History/HistoryTab.pcss
@@ -187,6 +187,39 @@
 }
 
 @media screen and (max-width: 768px) {
+  .pg-history-tab {
+    overflow: auto;
+
+    &__tabs-content {
+      width: 1200px;
+
+      .cr-tab-panel {
+        &__navigation-container-navigation {
+          width: 100%;
+        }
+
+        .cr-tab-content {
+          .pg-history-elem {
+            .cr-table-container {
+              max-height: 500px;
+              overflow: auto;
+            }
+          }
+        }
+      }
+    }
+
+    .cr-tab {
+      right: auto;
+
+      &__pointer {
+        left: 0 !important;
+        margin: auto;
+        right: 0 !important;
+      }
+    }
+  }
+
   .pg-history-elem {
     &__hide {
       overflow: hidden;
