Fix: Update swap currency and style to iframe

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -104,6 +104,18 @@
           font-weight: bold;
           text-transform: uppercase;
         }
+
+        .cr-modal__container-content {
+          padding: 0 calc(var(--gap) * 6.33);
+
+          .iframe-buy_with_credit_card {
+            align-items: center;
+            display: flex;
+            justify-content: center;
+            margin: auto;
+            width: 420px;
+          }
+        }
       }
 
       &-close {
