Fix: profile auth style polish

--- a/src/components/PercentageButton/PercentageButton.pcss
+++ b/src/components/PercentageButton/PercentageButton.pcss
@@ -1,7 +1,7 @@
 .cr-percentage-button {
   background: var(--button-normal);
   border: none;
-  color: var(--base);
+  color: var(--primary-text-color);
   cursor: pointer;
   font-weight: normal;
   margin: 0 calc(var(--gap) * 0.5);
