--- a/src/containers/ReferralProgram/ReferralProgram.pcss
+++ b/src/containers/ReferralProgram/ReferralProgram.pcss
@@ -101,6 +101,14 @@
       font-size: 16px;
     }
 
+    .custom-input {
+      width: 100%;
+
+      input {
+        height: 50px;
+      }
+    }
+
     .ref-code-button {
       margin: 8px 0;
     }
