--- a/src/custom/styles/containers/NavBar.pcss
+++ b/src/custom/styles/containers/NavBar.pcss
@@ -13,7 +13,7 @@
       text-transform: uppercase;
 
       &--active {
-        /* color: var(--bright-1); */
+        /* color: var(--primary-text-color); */
         border-bottom: 2px solid var(--active-tab-color);
         font-weight: bold;
       }
