--- a/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
+++ b/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
@@ -69,12 +69,12 @@
   }
 
   .cr-modal__container-content {
-    padding: 0 calc(var(--gap) * 10.23) !important;
+    padding: 0 10px !important;
     text-align: center;
   }
 
   .cr-modal__container {
-    width: calc(var(--gap) * 89.3);
+    width: calc(var(--gap) * 70);
 
     /* @media screen and (max-width: 600px) {
       width: calc(var(--gap) * 64.3);
