--- a/src/screens/ProfileScreen/ProfileScreen.pcss
+++ b/src/screens/ProfileScreen/ProfileScreen.pcss
@@ -647,7 +647,7 @@
     }
 
     &-footer {
-      padding: calc(var(--gap) * 3) calc(var(--gap) * 2.23);
+      padding: 10px;
 
       .cr-button {
         margin-left: calc(var(--gap) * 0.3);
