--- a/src/screens/SignUpScreen/SignUpScreen.pcss
+++ b/src/screens/SignUpScreen/SignUpScreen.pcss
@@ -118,7 +118,7 @@
     }
 
     .cr-modal__container-content {
-      color: var(--secondary-contrast-color);
+      color: var(--table-text-color);
       margin-bottom: 0;
       padding: 0 calc(var(--gap) * 8.33);
     }
