--- a/src/styles/colors.pcss
+++ b/src/styles/colors.pcss
@@ -99,7 +99,7 @@
   /* --orders-execute-color: #b18d4f;
   --orders-placeholder-color: var(--placeholder-text);
   --orders-text-secondary-color: var(--header-text);
-  --orders-text-primary-color: var(--bright-1); */
+  --orders-text-primary-color: var(--primary-text-color); */
 
   /* BASEAPP COLORS */
 
@@ -117,7 +117,7 @@
   --color-green: var(--green);
   --base-9: var(--placeholder-text);
   --base-new: var(--placeholder-text);
-  --color-white: var(--bright-1);
+  --color-white: var(--primary-text-color);
   --muted-text: var(--placeholder-text);
   --bright-1: var(--bright);
   --color-blue: var(--accent);
@@ -182,7 +182,7 @@
   --trading-header-selector-border: var(--header-border);
   --trading-header-selector-title: var(--placeholder-text);
   --trading-header-list-background: var(--trading-header-background);
-  --trading-header-fastsearch-button-color-active: var(--bright-1);
+  --trading-header-fastsearch-button-color-active: var(--primary-text-color);
   --trading-header-fastsearch-button-border-active: var(--accent);
   --trading-header-positive: var(--green);
   --trading-header-negative: var(--red);
@@ -450,13 +450,13 @@
   --button-percentage-text-color-active: var(--primary-text-color);
 
   /* primary cta color (blue) button  */
-  --button-primary-cta-background-color: var(--primary-cta-color-level-7);
+  --button-primary-cta-background-color: var(--button-normal);
   --button-primary-cta-text-color: var(--cta-layer-color-level-7);
-  --button-primary-cta-background-color-hover: var(--primary-cta-color);
+  --button-primary-cta-background-color-hover: var(--button-normal);
   --button-primary-cta-text-color-hover: var(--cta-layer-color);
-  --button-primary-cta-background-color-active: var(--primary-cta-color);
+  --button-primary-cta-background-color-active: var(--button-normal);
   --button-primary-cta-text-color-active: var(--cta-layer-color);
-  --button-primary-cta-background-color-disabled: var(--primary-cta-color-level-3);
+  --button-primary-cta-background-color-disabled: var(--button-normal);
   --button-primary-cta-text-color-disabled: var(--cta-layer-color-level-7);
 
   /*  ================================
