--- a/src/styles/themes/basic.pcss
+++ b/src/styles/themes/basic.pcss
@@ -79,7 +79,7 @@
   --nav-item-hover: #3a4c79;
 
   --loader-base-color: var(--back-bg);
-  --loader-start-color: var(--base); */
+  --loader-start-color: var(--primary-text-color); */
 
   /* Landing
   --light-bg-color: #FBFBFB;
