--- a/src/components/Modal/Modal.pcss
+++ b/src/components/Modal/Modal.pcss
@@ -21,7 +21,7 @@
     outline: 1px solid var(--base-3);
 
     &-header {
-      color: var(--base);
+      color: var(--primary-text-color);
       font-size: var(--font-size-bigger);
       margin-bottom: calc(var(--gap) * 3);
       outline: 1px solid var(--base-3);
