--- a/src/components/TabPanel/TabPanel.pcss
+++ b/src/components/TabPanel/TabPanel.pcss
@@ -23,7 +23,7 @@
     }
 
     &__active {
-      color: var(--base);
+      color: var(--primary-text-color);
     }
 
     &__hidden {
@@ -54,7 +54,7 @@
     margin-bottom: calc(var(--gap) * 5);
 
     &-navigation {
-      box-shadow: inset 0 -1px var(--base);
+      box-shadow: inset 0 -1px var(--primary-text-color);
       display: flex;
       padding-bottom: 1px;
       position: relative;
