--- a/src/containers/ToolBar/PriceBar/PriceBar.pcss
+++ b/src/containers/ToolBar/PriceBar/PriceBar.pcss
@@ -17,7 +17,7 @@
     }
 
     &-cursor {
-      background-color: var(--base);
+      background-color: var(--primary-text-color);
       height: 100%;
       margin: 0 -1px 0 -1px;
       width: 2px;
