--- a/src/containers/ToolBar/ToolBar.pcss
+++ b/src/containers/ToolBar/ToolBar.pcss
@@ -52,7 +52,7 @@
   &-reset-button {
     input {
       background: var(--header);
-      color: var(--base);
+      color: var(--primary-text-color);
       font-size: var(--trading-header-font-size);
       font-weight: normal;
       height: 33px;
