--- a/src/custom/containers/NavBar/NavBar.pcss
+++ b/src/custom/containers/NavBar/NavBar.pcss
@@ -124,7 +124,7 @@
         border-bottom: 2px solid var(--active-tab-color);
 
         /* change this color */
-        color: var(--bright-1);
+        color: var(--primary-text-color);
       }
     }
 
