Fix: change font configs

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -29,7 +29,7 @@
 }
 
 * {
-  font-family: Roboto;
+  font-family: inherit;
 }
 
 #root {
@@ -133,7 +133,7 @@ input[type=button] {
 
   td,
   th {
-    font-size: 0.8em !important;
+    font-size: 12px !important;
     padding: 6px 12px !important;
   }
 
