--- a/src/screens/SignUpScreen/SignUpScreen.pcss
+++ b/src/screens/SignUpScreen/SignUpScreen.pcss
@@ -85,6 +85,8 @@
     }
 
     &__recaptcha {
+      display: flex;
+      justify-content: center;
       position: relative;
       z-index: 1;
     }
