Fix: change price color at orderbook

--- a/src/custom/styles/containers/OrderBook.pcss
+++ b/src/custom/styles/containers/OrderBook.pcss
@@ -11,11 +11,11 @@
 
   &__price {
     &-asks {
-      color: var(--color-red);
+      color: var(--asks-level-8);
     }
 
     &-bids {
-      color: var(--color-green);
+      color: var(--bids-level-8);
     }
   }
 }
