Fix: inputs style polish

--- a/src/components/Dropdown/Dropdown.pcss
+++ b/src/components/Dropdown/Dropdown.pcss
@@ -14,8 +14,8 @@
 
     &-toggle {
       background: var(--input-background-color) !important;
-      border: 1px solid var(--input-border-color);
-      color: var(--input-placeholder-color);
+      border: 1px solid var(--table-text-color);
+      color: var(--table-text-color);
       font-size: calc(var(--gap) * 2);
       font-weight: normal;
       height: calc(var(--gap) * 8.3);
