--- a/src/containers/OrderBook/OrderBook.pcss
+++ b/src/containers/OrderBook/OrderBook.pcss
@@ -210,6 +210,7 @@
 
     &__large {
       height: calc(100% - 85px);
+      overflow-x: hidden;
       overflow-y: scroll;
 
       .cr-order-book {
