--- a/src/screens/TradingScreen/TradingScreen.pcss
+++ b/src/screens/TradingScreen/TradingScreen.pcss
@@ -3,7 +3,7 @@
 
   &__tab-panel {
     .cr-tab {
-      color: var(--tab-panel-text-color) !important;
+      color: var(--table-header-text-color) !important;
       padding: 9px 12px 9px !important;
 
       &__active {
