--- a/src/components/CustomInput/CustomInput.pcss
+++ b/src/components/CustomInput/CustomInput.pcss
@@ -1,6 +1,6 @@
 .custom-input {
   input {
-    border-color: var(--input-border-color);
+    border-color: var(--table-text-color);
   }
 
   label {
@@ -36,5 +36,9 @@
     -webkit-box-shadow: 0 0 0 1000px var(--input-background-color) inset;
     -webkit-text-fill-color: var(--input-text-color);
     transition: background-color 5000s ease-in-out 0s;
+  }
+
+  input::placeholder {
+    color: var(--table-text-color);
   }
 }
