--- a/src/index.pcss
+++ b/src/index.pcss
@@ -91,7 +91,7 @@ input[type=button] {
   &-header__content {
     background: var(--subheader-background-color);
     box-shadow: inset 0 -1px 0 var(--divider-color-level-1);
-    color: var(--primary-text-color);
+    color: var(--table-header-text-color);
     cursor: move;
     height: auto;
     padding: 9px 12px 9px;
@@ -310,7 +310,7 @@ input:-webkit-autofill {
 
   .cr-tab {
     box-shadow: none;
-    color: var(--tab-panel-text-color);
+    color: var(--table-header-text-color);
     cursor: pointer;
     font-size: 1rem;
     padding-bottom: calc(var(--border-radius) * 2);
@@ -354,7 +354,7 @@ input:-webkit-autofill {
 }
 
 #footer {
-  background: var(--background-dark);
+  background: var(--body-background-color);
   padding: 0 20px;
 
   & > div {
