Fix: return market selector block

--- a/src/containers/ToolBar/MarketSelector/MarketsTabs/MarketsTabs.pcss
+++ b/src/containers/ToolBar/MarketSelector/MarketsTabs/MarketsTabs.pcss
@@ -7,14 +7,14 @@
     overflow: hidden;
     position: sticky;
     top: 0;
-    width: calc(var(--big-gap) * 5.6);
+    width: 100%;
     z-index: 9999;
   }
 
   &-button {
     align-items: center;
     background-color: var(--market-selector-header-background-color);
-    color: var(--market-selector-header-text-color);
+    color: var(--table-header-text-color);
     cursor: pointer;
     display: flex;
     font-size: var(--trading-header-font-size);
