--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -23,3 +23,4 @@
 @import "./Chatello/ChatelloTop.pcss";
 @import "./Chatello/ChatelloTop2.pcss";
 @import "./Chatello/ChatelloInfo.pcss";
+@import "./ToolBar.pcss";
