Fix: change button background color

--- a/src/containers/ReferralProgram/ReferralProgram.pcss
+++ b/src/containers/ReferralProgram/ReferralProgram.pcss
@@ -110,6 +110,7 @@
     }
 
     .ref-code-button {
+      background-color: var(--button-primary-cta-background-color);
       margin: 8px 0;
     }
   }
