Fix: polish expired session modal

--- a/src/components/ExpiredSessionModal/ExpiredSessionModal.pcss
+++ b/src/components/ExpiredSessionModal/ExpiredSessionModal.pcss
@@ -1,7 +1,11 @@
 .expired-session-modal {
   .cr-modal {
     .cr-email-form {
-      min-height: calc(var(--big-gap) * 2.9);
+      min-height: calc(var(--big-gap) * 2.2);
+
+      &__button-wrapper {
+        padding: 0 10px;
+      }
 
       &__option,
       &__option-inner {
