Fix: apply custom fonts and popup window polish

--- a/src/components/SignUp/passwordValidationPopup.css
+++ b/src/components/SignUp/passwordValidationPopup.css
@@ -21,6 +21,8 @@
 #pwd-validation-popup .pwd-validation-popup-header {
     margin: 0;
     font-family: Roboto;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 #pwd-validation-popup ul {
@@ -66,7 +68,11 @@
 }
 #pwd-validation-popup .pwd-validation-popup-indicator-label {
     margin-top: 0;
+    font-weight: bold;
+    font-size: 14px;
+    margin-bottom: 18px;
 }
+
 #pwd-validation-popup .pwd-validation-popup-indicator-wrapper .pwd-validation-popup-indicator-2 {
     width: 66%;
     height: 100%;
