--- a/src/custom/styles/components/Header.pcss
+++ b/src/custom/styles/components/Header.pcss
@@ -1,6 +1,8 @@
 .pg-header {
   .pg-logo__img {
-    height: 37px;
+    height: 35px;
+    margin-left: 2px;
+    margin-top: -4px;
     width: 132px;
   }
 
@@ -12,7 +14,7 @@
 @media screen and (max-width: 800px) {
   .pg-header {
     .pg-container {
-      height: 60px;
+      height: 57px;
       max-width: 100%;
       padding: 0;
     }
