--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -1,6 +1,7 @@
 @import "./themes/style.pcss";
 @import "./colors.pcss";
 @import "./buttons.pcss";
+@import "./fonts.pcss";
 @import "../routes/Layout/Layout.pcss";
 @import "../screens/style.pcss";
 @import "../containers/style.pcss";
