Fix: add onClick property for change password button, change input label color, email verification screen polish

--- a/src/components/CopyableTextField/CopyableTextField.pcss
+++ b/src/components/CopyableTextField/CopyableTextField.pcss
@@ -10,7 +10,7 @@
   padding: 0;
 
   legend {
-    background: var(--input-legend-color);
+    background: var(--table-text-color);
     margin-bottom: auto;
     margin-top: calc(var(--gap) * -1.5);
     position: absolute;
