--- a/src/components/OrderForm/OrderForm.pcss
+++ b/src/components/OrderForm/OrderForm.pcss
@@ -38,7 +38,7 @@
   }
 
   &__label {
-    color: var(--input-legend-color);
+    color: var(--table-text-color);
     font-size: var(--font-size);
     font-weight: 200;
     line-height: calc(var(--font-size) * 2);
