--- a/src/components/OrderInput/OrderInput.pcss
+++ b/src/components/OrderInput/OrderInput.pcss
@@ -13,7 +13,7 @@
     width: 100%;
 
     label {
-      color: var(--input-legend-color);
+      color: var(--table-text-color);
     }
 
     .custom-input {
