--- a/src/containers/Order/Order.pcss
+++ b/src/containers/Order/Order.pcss
@@ -97,7 +97,7 @@
 
               &__label {
                 background-color: var(--input-background-color);
-                color: var(--input-legend-color);
+                color: var(--table-text-color);
                 font-size: calc(var(--gap) * 1.5);
                 margin-left: calc(var(--gap) * -0.35);
                 padding: 0 calc(var(--gap) * 0.75);
