--- a/src/screens/EmailVerification/EmailVerification.pcss
+++ b/src/screens/EmailVerification/EmailVerification.pcss
@@ -39,7 +39,6 @@
 
       &-text {
         align-items: center;
-        color: var(--secondary-contrast-cta-color);
         display: flex;
         font-size: calc(var(--big-gap) * 0.27);
         justify-content: center;
@@ -51,22 +50,7 @@
         align-items: center;
         display: flex;
         justify-content: center;
-
-        &-button {
-          background: none;
-          border: none;
-          color: var(--secondary-contrast-cta-color);
-          cursor: pointer;
-          font-size: calc(var(--big-gap) * 0.23);
-          outline: none;
-          text-decoration: underline;
-          transition: 0.2s;
-
-          &:hover {
-            color: var(--primary-text-color);
-            transition: 0.2s;
-          }
-        }
+        padding: 0 10px;
       }
     }
   }
