--- a/src/screens/ProfileScreen/ProfileScreen.pcss
+++ b/src/screens/ProfileScreen/ProfileScreen.pcss
@@ -510,7 +510,7 @@
           padding: 0 8px 0 9px;
 
           legend {
-            color: var(--input-legend-color);
+            color: var(--table-text-color);
           }
 
           &:focus-within {
