--- a/src/components/EmailForm/EmailForm.pcss
+++ b/src/components/EmailForm/EmailForm.pcss
@@ -69,7 +69,7 @@
   &__label {
     background: var(--input-background-color);
     border-radius: 2px;
-    color: var(--input-legend-color);
+    color: var(--table-text-color);
     left: 10px;
     padding: 2px 6px;
     position: relative;
