Fix: profile partial component styles

--- a/src/custom/styles/colors.pcss
+++ b/src/custom/styles/colors.pcss
@@ -3,4 +3,6 @@
   --table-text-color: rgb(100, 130, 120);
   --table-header-text-color: rgb(158, 207, 195);
   --table-subheader-color: rgb(145, 147, 147);
+  --input-border-color: #648280;
+  --secondary-contrast-cta-color: #648280;
 }
