--- a/src/custom/styles/containers/ProfileAddress.pcss
+++ b/src/custom/styles/containers/ProfileAddress.pcss
@@ -40,21 +40,20 @@
       width: 46%;
 
       &-is-active {
-        border: 1px solid var(--kyc-active-color) !important;
+        border: 1px solid var(--input-border-color-active) !important;
         height: calc(var(--gap) * 10.5) !important;
         margin-bottom: calc(var(--gap) * 0.5);
         margin-top: 0 !important;
       }
 
       fieldset {
-        border: 1px solid var(--kyc-grey);
+        border: 1px solid var(--input-border-color);
         border-radius: calc(var(--gap) * 0.6);
         box-sizing: border-box;
-        color: var(--kyc-grey);
-        height: 49px;
-        margin: 0;
-        margin-top: calc(var(--gap) * 1.3);
-        width: 100%;
+        color: var(--input-text-color);
+        height: calc(var(--gap) * 8.16);
+        margin-right: 10px;
+        width: 95%;
       }
 
       &-text {
