--- a/src/custom/styles/containers/ProfilePartial.pcss
+++ b/src/custom/styles/containers/ProfilePartial.pcss
@@ -1,26 +1,25 @@
 .pg-confirm__content-profile-partial {
-  color: var(--base-10);
+  color: var(--secondary-contrast-cta-color);
   margin: 0 auto;
 
   &-forms {
     font-size: calc(var(--gap) * 2.33);
-    height: calc(var(--big-gap) * 3.8);
-    margin: 0 calc(var(--gap) * 1.2) calc(var(--gap) * 4.29) calc(var(--gap) * 3);
+    height: calc(var(--big-gap) * 3.69);
+    margin: 0 calc(var(--gap) * 1.2) calc(var(--gap) * 4.4) calc(var(--gap) * 3);
     overflow-x: hidden;
     overflow-y: auto;
     padding-right: calc(var(--gap) * 1.5);
-    padding-top: calc(var(--gap) * 1.5);
 
     &::-webkit-scrollbar {
       width: 0;
     }
 
     &::-webkit-scrollbar-track {
-      background-color: var(--kyc-grey);
+      background-color: var(--dropdown-scrollbar-track-color);
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: var(--color-blue);
+      background-color: var(--dropdown-scrollbar-button-color);
     }
   }
 
@@ -37,24 +36,23 @@
 
     &-row {
       margin-top: calc(var(--gap) * 2);
-      width: 46%;
+      width: 50%;
 
       &-is-active {
-        border: 1px solid var(--kyc-active-color) !important;
+        border: 1px solid var(--input-border-color-active) !important;
         height: calc(var(--gap) * 10.5) !important;
         margin-bottom: calc(var(--gap) * 0.5);
         margin-top: 0 !important;
       }
 
       fieldset {
-        border: 1px solid var(--kyc-grey);
+        border: 1px solid var(--input-border-color);
         border-radius: calc(var(--gap) * 0.6);
         box-sizing: border-box;
-        color: var(--kyc-grey);
-        height: 49px;
-        margin: 0;
-        margin-top: calc(var(--gap) * 1.3);
-        width: 100%;
+        color: var(--input-text-color);
+        height: calc(var(--gap) * 8.16);
+        margin-right: 10px;
+        width: 95%;
       }
 
       &-text {
@@ -69,147 +67,105 @@
       &-content {
         display: inline-block;
         position: relative;
-        width: 100%;
+        width: 95%;
 
         &-label {
-          background-color: var(--base-bright);
+          background-color: var(--input-background-color);
           margin-left: calc(var(--gap) * 1.42);
+          margin-top: calc(var(--gap) * -1.5);
           padding: 0 calc(var(--gap) * 0.33);
           position: absolute;
           z-index: 1;
         }
 
-        &--focused {
-          border: 1px solid var(--accent) !important;
-          color: var(--accent) !important;
+        &-number-dropdown {
+          .dropdown {
+            &-menu {
+              height: 75px;
+              overflow-x: hidden;
+              overflow-y: scroll;
+              top: auto !important;
+              transform: none !important;
+            }
+          }
         }
 
-        &--wrong {
-          border: 1px solid var(--red) !important;
-          color: var(--red) !important;
+        .custom-input {
+          height: 100%;
+          padding-left: calc(var(--gap) * 1.2);
+
+          label {
+            color: var(--secondary-contrast-cta-color);
+            left: 3%;
+            margin-top: -11px;
+          }
+
+          input {
+            margin-left: 0;
+          }
         }
 
         legend {
-          background-color: var(--base-bright);
+          background-color: var(--input-background-color);
+          color: var(--secondary-contrast-cta-color);
+          font-size: calc(var(--gap) * 2);
+          left: 5%;
+          padding: 0 calc(var(--gap) * 0.5);
           position: absolute;
-          top: calc(var(--gap) * -1.6);
+          top: calc(var(--gap) * -1.5);
+          width: auto;
+        }
+
+        &--focused {
+          border: 1px solid var(--input-border-color-active) !important;
+          color: var(--input-legend-color-active) !important;
+
+          .custom-input label {
+            color: var(--input-legend-color-active) !important;
+          }
+
+          legend {
+            color: var(--secondary-contrast-cta-color) !important;
+          }
+        }
+
+        &--wrong {
+          border: 1px solid var(--system-red) !important;
+          color: var(--system-red) !important;
         }
 
         input {
           background: transparent;
           border: unset;
           bottom: 0;
-          color: var(--primary-text-color);
+          color: var(--input-text-color);
           font-size: calc(var(--gap) * 2);
-          margin-top: 8px;
+          margin-left: calc(var(--gap) * 1.2);
+          margin-top: calc(var(--gap) * 2);
           width: 100%;
 
           &::placeholder {
-            color: var(--text-muted);
+            color: var(--input-placeholder-color);
           }
         }
 
         &:focus-within {
-          color: var(--color-blue);
-        }
-
-        .cr-dropdown {
-          &__input,
-          &__input--open {
-            align-items: center;
-            background-color: var(--base-bright);
-            border: 1px solid var(--kyc-grey);
-            border-radius: 4px;
-            color: var(--kyc-grey);
-            display: flex;
-            height: 49px;
-            justify-content: space-between;
-            margin-right: 0;
-            margin-top: calc(var(--gap) * 1.3);
-            width: 100%;
-
-            &:active {
-              background-color: var(--base-bright);
-            }
-          }
-
-          &__input {
-            &-label {
-              font-size: calc(var(--gap) * 2);
-              font-weight: var(--font-weight);
-              line-height: 49px;
-              margin-left: 0.75em;
-              text-shadow: 0 0 0 var(--kyc-grey);
-            }
-
-            &-icon {
-              cursor: pointer;
-              line-height: 0;
-              margin-right: calc(var(--gap) * 3);
-              position: absolute;
-            }
-
-            &-search-icon {
-              margin-right: 3px;
-              position: relative;
-
-              img {
-                margin-bottom: -3px;
-              }
-            }
-          }
-
-          &__input--open {
-            border-color: var(--color-blue);
-            color: var(--backhround-dropdown-text);
-          }
-
-          &__list {
-            background-color: var(--background-dropdown);
-            border: 0;
-            border-radius: 4px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.24), 0 2px 8px rgba(0, 0, 0, 0.12);
-            color: var(--kyc-grey);
-            max-height: calc(var(--big-gap) * 1.6);
-            overflow-y: auto;
-            width: 99%;
-
-            &-item {
-              color: var(--kyc-grey);
-
-              &-label {
-                margin-left: 0.75em;
-              }
-
-              &:hover {
-                background-color: var(--background-dropdown-hover);
-                color: var(--background-dropdown-hover-text);
-              }
-            }
-
-            &::-webkit-scrollbar {
-              width: 3px;
-            }
-
-            &::-webkit-scrollbar-track {
-              background-color: transparent;
-              border-bottom-left-radius: 50%;
-              border-top-left-radius: 50%;
-            }
-
-            &::-webkit-scrollbar-thumb {
-              background-color: var(--primary-text-color);
-            }
-          }
+          color: var(--input-legend-color-active) !important;
         }
       }
     }
   }
 }
 
-@media screen and (max-width: 768px) {
-  .pg-confirm__content-profile-partial {
+@media (max-width: 576px) {
+  .pg-confirm__content-identity {
+    &-forms {
+      height: auto;
+    }
+
     &-col {
+      flex-direction: column;
+
       &-row {
         width: 100%;
       }
