--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -246,6 +246,35 @@
       flex-wrap: wrap;
       justify-content: center;
     }
+
+    .pg-copyable-text-field {
+      &__input {
+        border: 1px solid var(--input-border-color);
+
+        .input-group {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+
+          .custom-input {
+            width: 70%;
+
+            label {
+              left: 1%;
+              margin-top: -9px;
+              z-index: 10;
+            }
+          }
+        }
+
+        .btn-primary {
+          border-radius: 0.3rem;
+          height: 40px;
+          margin: auto 5px;
+          width: 100px;
+        }
+      }
+    }
   }
 
   .section-margin {
