Fix: referral screen copyable text fields

--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -13,6 +13,7 @@
     }
 
     .cr-table thead th {
+      border: none;
       top: 0;
     }
   }
@@ -135,7 +136,7 @@
     border: none;
     color: var(--table-text-color);
     font-size: 12px;
-    margin-bottom: 5px;
+    margin: 0 15px;
     position: relative;
     z-index: 1;
   }
@@ -279,6 +280,7 @@
 
   .section-margin {
     margin-top: 40px;
+    padding-bottom: 15px;
   }
 
   .section--transparent {
@@ -306,6 +308,7 @@
       &:last-child {
         td {
           background-color: #141717;
+          border: none;
           color: #fff;
           font-weight: 600;
 
