--- a/src/custom/styles/screens/ProfileScreen.pcss
+++ b/src/custom/styles/screens/ProfileScreen.pcss
@@ -61,7 +61,8 @@
     padding-left: 20px;
   }
 
-  h2 {
+  h3 {
+    color: var(--table-header-text-color);
     font-family: var(--font-family);
     font-size: 14px !important;
     font-style: normal;
