--- a/src/screens/ForgotPassword/ForgotPassword.pcss
+++ b/src/screens/ForgotPassword/ForgotPassword.pcss
@@ -15,7 +15,7 @@
   .pg-forgot-password___form {
     .cr-email-form {
       background: var(--body-background-color);
-      min-height: calc(var(--big-gap) * 5);
+      min-height: calc(var(--big-gap) * 3.5);
 
       &__option {
         background: var(--subheader-background-color);
@@ -72,7 +72,10 @@
       }
 
       &__button-wrapper {
+        left: auto;
         min-height: calc(var(--gap) * 10);
+        position: relative;
+        right: auto;
       }
     }
   }
