--- a/src/screens/PricePackages/PricePackages.pcss
+++ b/src/screens/PricePackages/PricePackages.pcss
@@ -156,6 +156,7 @@
         font-weight: normal;
         height: 72px;
         line-height: 16px;
+        margin-top: 1em;
         padding-left: 10px;
 
         b {
