--- a/src/screens/ProfileTwoFactorAuthScreen/ProfileTwoFactorAuthScreen.pcss
+++ b/src/screens/ProfileTwoFactorAuthScreen/ProfileTwoFactorAuthScreen.pcss
@@ -73,6 +73,8 @@
 
           .btn-primary {
             border-radius: 0.3rem;
+            font-weight: bold;
+            text-transform: uppercase;
           }
         }
       }
@@ -182,7 +184,7 @@
         margin: calc(var(--gap) * 2) 0;
 
         a {
-          color: rgba(var(--primary-cta-color));
+          color: var(--primary-cta-color);
         }
 
         div {
