--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -371,7 +371,8 @@
       width: 300px;
 
       .border {
-        border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+        border: none !important;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.5) !important;
       }
 
       li {
