--- a/src/custom/styles/components/OrderForm.pcss
+++ b/src/custom/styles/components/OrderForm.pcss
@@ -1,6 +1,9 @@
 .cr-order-item {
   .cr-order-input {
     &__crypto-icon {
+      align-items: center;
+      display: flex;
+      justify-content: center;
       padding: calc(var(--gap) * 1.1) !important;
     }
   }
