--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -7,3 +7,4 @@
 @import "../containers/style.pcss";
 @import "../components/style.pcss";
 @import "../plugins/style.pcss";
+@import "../custom/styles/style.pcss";
