--- a/src/screens/ConfirmScreen/ConfirmScreen.pcss
+++ b/src/screens/ConfirmScreen/ConfirmScreen.pcss
@@ -57,6 +57,9 @@
     &-identity,
     &-documents,
     &-address {
+      max-width: 380px;
+      padding: 0 10px;
+
       &__row,
       &__forms__row {
         align-items: flex-start;
@@ -289,8 +292,7 @@
   &__content-deep {
     margin: 0;
     margin-top: 24px;
-    max-width: 380px;
-    padding: 0;
+    max-width: 100%;
     width: 100vw;
 
     button {
