Fix: sign in 2fa modal polish

--- a/src/containers/TwoFactorAuth/TwoFactorAuth.pcss
+++ b/src/containers/TwoFactorAuth/TwoFactorAuth.pcss
@@ -15,7 +15,7 @@
   .pg-2fa___form {
     .cr-email-form {
       background: var(--body-background-color);
-      min-height: calc(var(--big-gap) * 5);
+      min-height: calc(var(--big-gap) * 5.5);
 
       &__option {
         background: var(--subheader-background-color);
@@ -73,7 +73,9 @@
       }
 
       &__button-wrapper {
-        min-height: calc(var(--gap) * 10);
+        margin-bottom: 10px;
+        min-height: calc(var(--gap) * 5);
+        padding: 0 20px;
       }
     }
   }
