Fix: move to custom default kyc flow styles

--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -24,3 +24,6 @@
 @import "./Chatello/ChatelloTop2.pcss";
 @import "./Chatello/ChatelloInfo.pcss";
 @import "./ToolBar.pcss";
+@import "./DefaultDocuments.pcss";
+@import "./DefaultIdentity.pcss";
+@import "./DefaultPhone.pcss";
