--- a/src/custom/styles/screens/ConfirmScreen.pcss
+++ b/src/custom/styles/screens/ConfirmScreen.pcss
@@ -1,6 +1,96 @@
+.pg-wrapper {
+  background: url(assets/images/background.svg);
+  background-size: cover;
+  height: 100vh;
+
+  .pg-logo {
+    display: flex;
+    justify-content: center;
+    padding-top: calc(var(--big-gap) * 2.5);
+
+    &__img {
+      height: calc(var(--big-gap) * 1.08);
+    }
+  }
+}
+
 .pg-confirm {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-top: calc(var(--big-gap) * 1);
+
+  &__loader {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 50%;
+  }
+
+  &-box {
+    background-color: var(--body-background-color);
+    border-radius: 4px;
+    box-shadow: 1px 1px 5px rgba(46, 76, 128, 0.2);
+    display: block;
+    margin: 0 auto;
+    max-height: calc(var(--big-gap) * 10);
+    max-width: calc(var(--big-gap) * 9.33);
+    position: relative;
+    width: 100%;
+
+    &-close {
+      background: url(assets/images/close.svg);
+      background-size: cover;
+      cursor: pointer;
+      height: 14px;
+      margin: 15px 10px;
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      width: 14px;
+    }
+  }
+
+  &__success,
+  &__error {
+    font-size: 1.2rem;
+    text-align: center;
+  }
+
+  &__error {
+    color: var(--system-red);
+  }
+
+  &__success {
+    color: var(--system-green);
+  }
+
+  &__title {
+    color: var(--primary-text-color);
+    text-align: center;
+
+    &-text {
+      color: var(--secondaty-contrast-cta-color);
+      display: block;
+      font-size: 12px;
+      left: auto;
+      line-height: calc(var(--gap) * 2.5);
+      position: absolute;
+      text-align: center;
+      top: 36px;
+      width: max-content;
+    }
+  }
+
   &__progress {
+    background: var(--subheader-background-color);
+    border-bottom: 1px solid var(--divider-color-level-2);
+    border-radius: 4px 4px 0 0;
     height: 75px;
+    margin: 0 auto;
 
     &-circle {
       &-0,
@@ -10,10 +100,13 @@
       &-4 {
         align-items: center;
         background: var(--kyc-circle-color);
+        border-radius: 50%;
+        box-sizing: border-box;
         display: flex;
         height: 24px;
         justify-content: center;
         margin-top: 15px;
+        position: relative;
         top: -1px;
         width: 24px;
 
@@ -29,18 +122,53 @@
           justify-content: center;
         }
       }
+
+      &-0::after {
+        content: "0";
+      }
+
+      &-1::after {
+        content: "1";
+      }
+
+      &-2::after {
+        content: "2";
+      }
+
+      &-3::after {
+        content: "3";
+      }
+
+      &-4::after {
+        content: "4";
+      }
+
+      &-3 {
+        margin-right: 0;
+      }
     }
 
     &-line {
+      &-0,
       &-1,
       &-2,
       &-3 {
+        background-color: var(--divider-color-level-2);
+        display: inline-block;
+        flex: 1;
+        height: 1px;
         margin: 15px 0 0 0;
       }
     }
 
     &-items {
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+      margin: auto;
       max-width: 240px;
+      position: relative;
+      width: 100%;
 
       &--long {
         max-width: 285px;
@@ -49,73 +177,192 @@
 
     &-zero {
       .pg-confirm__progress-circle-1 {
+        background: var(--primary-cta-color);
+
         &::after {
           color: var(--main-bg);
         }
       }
 
       .pg-confirm__active-1 {
-        font-weight: normal;
-      }
-    }
-
-    &-first {
-      .pg-confirm__progress-circle-1 {
-        &::after {
-          color: var(--main-bg);
-        }
-      }
-
-      .pg-confirm__active-1 {
-        font-weight: normal;
-      }
-    }
-
-    &-second {
-      .pg-confirm__progress-circle-2 {
-        &::after {
-          color: var(--main-bg);
-        }
-      }
-
-      .pg-confirm__active-2 {
-        font-weight: normal;
-      }
-    }
-
-    &-third {
-      .pg-confirm__progress-circle-3 {
-        &::after {
-          color: var(--main-bg);
-        }
-      }
-
-      .pg-confirm__active-3 {
-        font-weight: normal;
-      }
-    }
-
-    &-fourth {
-      .pg-confirm__progress-circle-4 {
-        &::after {
-          color: var(--main-bg);
-        }
-      }
-
-      .pg-confirm__active-4 {
+        color: var(--primary-text-color);
         font-weight: normal;
       }
     }
   }
 
-  &__title-text {
-    font-family: "Noto Sans SC";
-    font-size: 12px;
-    font-style: normal;
-    font-weight: normal;
-    left: auto;
-    top: 33px;
-    width: max-content;
+  &-first {
+    .pg-confirm__progress-circle-1 {
+      &::after {
+        color: var(--main-bg);
+      }
+    }
+
+    .pg-confirm__active-1 {
+      font-weight: normal;
+    }
+  }
+
+  &-second {
+    .pg-confirm__progress-circle-2 {
+      background: var(--primary-cta-color);
+
+      &::after {
+        color: var(--main-bg);
+      }
+    }
+
+    .pg-confirm__active-2 {
+      color: var(--primary-text-color);
+      font-weight: normal;
+    }
+  }
+
+  &-third {
+    .pg-confirm__progress-circle-3 {
+      background: var(--primary-cta-color);
+
+      &::after {
+        color: var(--main-bg);
+      }
+    }
+
+    .pg-confirm__active-3 {
+      color: var(--primary-text-color);
+      font-weight: normal;
+    }
+  }
+
+  &-fourth {
+    .pg-confirm__progress-circle-4 {
+      &::after {
+        color: var(--main-bg);
+      }
+    }
+
+    .pg-confirm__active-4 {
+      font-weight: normal;
+    }
+  }
+
+  .pg-confirm__active-4 {
+    color: var(--primary-text-color);
+    font-weight: bold;
+  }
+
+  .pg-confirm__progress-circle-1,
+  .pg-confirm__progress-circle-2,
+  .pg-confirm__progress-circle-3,
+  .pg-confirm__progress-circle-4 {
+    &.active-circle {
+      background: #ffd567;
+
+      &::after {
+        color: black;
+      }
+
+      .pg-confirm__title-text {
+        color: #fff;
+        font-family: "Noto Sans SC";
+        font-size: 12px;
+        font-style: normal;
+        font-weight: normal;
+        left: auto;
+        width: max-content;
+      }
+    }
+  }
+
+  .custom-input {
+    height: 39px;
+    position: relative;
+    width: 100%;
+
+    label {
+      left: 0;
+      margin-top: -13px;
+    }
+
+    .input-group {
+      height: 100%;
+
+      input {
+        border: none;
+        height: 100%;
+        margin-top: 0;
+        padding: 0;
+
+        &:focus {
+          box-shadow: none;
+        }
+      }
+    }
+  }
+
+  .input-group {
+    .custom-input {
+      width: 73%;
+    }
+  }
+
+  &__content {
+    margin: 0 auto;
+    width: 100%;
+
+    input,
+    button {
+      outline: none;
+    }
+
+    &-deep {
+      display: flex;
+      justify-content: center;
+      margin: 0 calc(var(--gap) * 4);
+      padding-bottom: 30px;
+    }
+  }
+
+  &__center {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 576px) {
+  .pg-logo {
+    padding-top: calc(var(--big-gap) * 1) !important;
+
+    &__img {
+      height: calc(var(--big-gap) * 0.7) !important;
+    }
+  }
+
+  .pg-confirm {
+    &-box {
+      max-height: calc(var(--big-gap) * 16.3);
+      width: 95%;
+    }
+
+    &__progress {
+      background: var(--subheader-background-color);
+      border-bottom: 1px solid var(--divider-color-level-2);
+      border-radius: 4px 4px 0 0;
+      height: 100px;
+      margin: 0 auto;
+
+      &-items {
+        max-width: 270px;
+      }
+    }
+
+    &__content-phone-col {
+      .custom-input {
+        font-size: calc(var(--gap) * 1.8);
+
+        input {
+          font-size: calc(var(--gap) * 2.2);
+        }
+      }
+    }
   }
 }
 
