Fix: refactor kyc styles

--- a/src/custom/styles/containers/ProfileAddress.pcss
+++ b/src/custom/styles/containers/ProfileAddress.pcss
@@ -100,7 +100,8 @@
           bottom: 0;
           color: var(--primary-text-color);
           font-size: calc(var(--gap) * 2);
-          margin-top: 8px;
+          height: 100%;
+          padding: 0 5px;
           width: 100%;
 
           &::placeholder {
