--- a/src/custom/styles/containers/ProfilePartial.pcss
+++ b/src/custom/styles/containers/ProfilePartial.pcss
@@ -1,14 +1,15 @@
 .pg-confirm__content-profile-partial {
   color: var(--secondary-contrast-cta-color);
   margin: 0 auto;
+  width: 100%;
 
   &-forms {
     font-size: calc(var(--gap) * 2.33);
-    height: calc(var(--big-gap) * 3.69);
     margin: 0 calc(var(--gap) * 1.2) calc(var(--gap) * 4.4) calc(var(--gap) * 3);
     overflow-x: hidden;
     overflow-y: auto;
     padding-right: calc(var(--gap) * 1.5);
+    padding-top: calc(var(--gap) * 1.5);
 
     &::-webkit-scrollbar {
       width: 0;
