Fix: fonts styles polish

--- a/src/custom/styles/screens/ProfileScreen.pcss
+++ b/src/custom/styles/screens/ProfileScreen.pcss
@@ -50,6 +50,7 @@
     font-size: 20px !important;
     font-style: normal;
     font-weight: bold;
+    line-height: calc(var(--big-gap) * 0.66);
     opacity: 0.9;
   }
 
