--- a/src/screens/ProfileScreen/ProfileScreen.pcss
+++ b/src/screens/ProfileScreen/ProfileScreen.pcss
@@ -146,8 +146,11 @@
           margin-top: 0;
 
           h2 {
-            font-size: 22px;
-            line-height: 26px;
+            font-family: var(--font-family);
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 14px;
+            margin: 12px 0;
           }
 
           h3 {
