Fix: resolve FE issues

--- a/src/custom/styles/screens/ConfirmScreen.pcss
+++ b/src/custom/styles/screens/ConfirmScreen.pcss
@@ -308,6 +308,7 @@
 
   &__content {
     margin: 0 auto;
+    padding: 0 20px;
     width: 100%;
 
     input,
@@ -321,7 +322,7 @@
       justify-content: center;
       margin: 0 calc(var(--gap) * 4);
       padding-bottom: 30px;
-      width: auto;
+      width: 100%;
 
       &-back {
         background: #e85e59 !important;
