--- a/src/custom/styles/containers/DefaultDocuments.pcss
+++ b/src/custom/styles/containers/DefaultDocuments.pcss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   font-size: calc(var(--gap) * 2.33);
-  margin: var(--gap) calc(var(--gap) * 3.4) calc(var(--gap) * 2.5) calc(var(--gap) * 3.4);
+  width: 100%;
 
   &-drag {
     float: right;
@@ -36,6 +36,7 @@
       color: var(--input-text-color);
       display: inline-block;
       margin-top: calc(var(--gap) * 2);
+      width: 100%;
 
       fieldset {
         border: 1px solid var(--input-border-color);
